# TinySQL

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
QuantaTextToSql/: __init__.py
QuantaTextToSql/ablate/: __init__.py  ablate_bm1.py  ablate_m1.py  ablate_tm1.py  load_m1.py  load_model.py
QuantaTextToSql/corrupt_data/: __init__.py  clean_corrupt_data.py
QuantaTextToSql/finetune/: compute_token_counts.py  delete_from_hf.py  env_variables.sh  finetune.py  finetune_accelerate.py  finetune_customloss.py  random_code.py  run_experiments.sh  upload_to_martian_hf.py
QuantaTextToSql/gretel_dd/: check_records.py  create_dataset_splits.py  cs12.yaml  cs12_base.yaml  cs13.yaml  cs13_base.yaml  data_designer_cs12.ipynb  fetch_dataset.py  invalid_custom_records.json  invalid_records.json  prompt.txt  topics.txt
QuantaTextToSql/load_data/: __init__.py  load_model.py
QuantaTextToSql/training_data/: __init__.py  generate_cs1.py  generate_cs2.py  generate_cs3.py  generate_csn.py  generate_datasets.py  generate_utils.py  sql_order_by.py
TinySQL/: __init__.py
TinySQL/ablate/: ablate_m1.py
TinySQL/classifiers/: logistic_regression_classifier.py  t5_classifier.py
TinySQL/finetune/: .env  (+8 more)
finetune/: compute_token_counts.py  finetune.py  finetune_accelerate.py  run.sh  run_experiments_1and2.sh  run_experiments_3and4.sh
notebooks/: BM1_CS1_CS2_Investigation.ipynb  BM1_CS1_Investigation.ipynb  SAEs_ablation_.ipynb  TinySQL_case_study.ipynb  TinySQL_logit_lens_.ipynb  analyze_datasets.ipynb  analyze_tiny_stories.ipynb  error_detection.ipynb  generate_corrupt_data.ipynb  generate_csN_training_data.ipynb  minimal_break_features.ipynb  minimal_circuits.ipynb  sae_interp.ipynb  sae_training.ipynb  tinysql_EAP.ipynb  tinysql_EAP_JSON.ipynb  tinysql_EAP_circuits.ipynb  tinysql_EAP_js.ipynb  tinysql_SAE_circuit.ipynb  tinysql_activation_patching.ipynb  tinysql_activation_patching_json.ipynb  tinysql_attribution_patching.ipynb  tinysql_generate.ipynb  tinysql_m1_useful_nodes.ipynb  tinysql_semantic_map.ipynb
tests/: test_ablate_bm1.py  test_ablate_m1.py  test_ablate_m2.py  test_ablate_tm1.py  test_corrupt_data.py  test_cs1.py  test_cs1_training_data.py  test_cs2.py  test_cs3.py  test_fragments.py  test_generate.py  test_load.py  test_suite.py  test_util.py
training_data/: __init__.py  batch_item.py  generate_CS1.py  generate_cs1.py  generate_cs2.py  generate_cs3.py  sql_create_table.py  sql_order_by.py  sql_select_from.py
(+91 files in other folders)
