[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QuantaTextToSql"
version = "1.0"
description = "Tools for use with the quanta text to sql project"
authors = [{name = "Philip Quirke et al", email = "philipquirkenz@gmail.com"}]
license = "MIT"
keywords = ["SQL", "machine learning", "text to SQL", "interpretable AI"]
urls = {
    "Homepage" = "https://github.com/withmartian/quanta_text_to_sql",
    "Repository" = "https://github.com/withmartian/quanta_text_to_sql"
}
dependencies = [
    "numpy>=1.18.1",
    "wheel",
    "QuantaMechInterp>=1.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.python]
requires = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["QuantaTextToSql*"]
namespaces = true

[project.optional-dependencies]
testing = ["pytest"]

