[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TinySQL"
version = "1.0"
description = "Tools for use with the quanta text to sql project"
authors = [{name = "Philip Quirke et al", email = "philipquirkenz@gmail.com"}]
keywords = ["SQL", "machine learning", "text to SQL", "interpretable AI"]
readme = "README.md"  
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.18.1",
    "wheel",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/withmartian/TinySQL"
Repository = "https://github.com/withmartian/TinySQL"

[tool.setuptools.packages.find]
where = ["."]
include = ["TinySQL*"]
namespaces = true

[project.optional-dependencies]
testing = ["pytest"]

[tool.ruff]
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401","F403"]